# jade-job

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: unit-test.yml
jade-job/: slackbot.py  vault.py
jade_job/: main.py
tests/: test_jade_job.py
